fix download button spacing

--- a/themes/solstice/app/stylesheets/classes.less
+++ b/themes/solstice/app/stylesheets/classes.less
@@ -67,6 +67,9 @@
   font-weight:bold;
   font-size:1.1em;
   padding:10px 35px;
+  i{
+    margin-right:2px
+  }
 }
 
 /* Shapes */
